# chilliwack-tqi

./: .gitignore  README.md  package-lock.json  package.json  playwright.config.js  pyproject.toml  transit-quality-index.md
.github/workflows/: go.yml  pages.yml
data/: amenities.json  chilliwack_boundary.geojson
docs/: index.html  isochrone_0800_AM_Peak.html  isochrone_1200_Midday.html  report.html  tqi_results.json
docs/superpowers/plans/: 2026-03-28-go-rewrite.md  2026-03-29-visual-parity.md  2026-04-02-population-weighted-tqi.md
docs/superpowers/specs/: 2026-03-28-go-rewrite-design.md  2026-03-29-visual-parity-design.md  2026-04-02-population-weighted-tqi-design.md
e2e/: accessibility.spec.js  dashboard.spec.js  pageload.spec.js  report.spec.js
go/: Makefile  go.mod
go/cmd/tqi/: main.go
go/internal/: integration_test.go
go/internal/api/: server.go  server_test.go  sse.go
go/internal/config/: config.go
go/internal/equity/: equity.go
go/internal/geo/: haversine.go  haversine_test.go
go/internal/grid/: boundary.go  generate.go  generate_test.go  types.go
go/internal/gtfs/: download.go  download_test.go  filter.go  filter_test.go  parse.go  parse_test.go  types.go
go/internal/isochrone/: isochrone.go
go/internal/neighbourhood/: neighbourhood.go  neighbourhood_test.go
go/internal/raptor/: cache.go  (+8 more)
go/web/: embed.go  embed_stub.go  index.html  package-lock.json  package.json
src/tqi/: __init__.py  cli.py  config.py
tests/: conftest.py  test_grid.py  test_gtfs_filter.py  test_gtfs_parse.py  test_raptor_engine.py  test_scoring.py
(+69 files in other folders)
